Bug 98473 - Crash with "key" language + gtk3 when opening attachment tdf#98472
Summary: Crash with "key" language + gtk3 when opening attachment tdf#98472
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-03-06 12:36 UTC by Julien Nabet
Modified: 2016-10-25 19:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (11.97 KB, text/plain)
2016-03-06 12:36 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-03-06 12:36:16 UTC
Created attachment 123345 [details]
bt with debug symbols

Hello,

On pc Debian x86-64 with master sources updated yesterday + enable-dbgutil + gtk3 + language "key", I got a crash when opening attachment of tdf#98472

Steps to reproduce:
- check you use gtk3 (export SAL_USE_VCLPLUGIN=gtk3)
- use "key" language (not English, German, French, etc...)
- retrieve https://bugs.documentfoundation.org/attachment.cgi?id=123344
- open it
=> crash
Comment 1 Julien Nabet 2016-03-11 23:03:24 UTC
On pc Debian x86-64 with master sources updated today (27fc89cce931039f8f585c10b8ee41023c777b5e), I still reproduce this with about the same bt:
#29 0x00002aaac88ad38f in gtk_menu_bar_new_from_model () at /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
#30 0x00002aaac83f7493 in GtkSalMenu::CreateMenuBarWidget() (this=0x2f35510) at /home/julien/compile-libreoffice/libreoffice/vcl/unx/gtk3/../gtk/gtksalmenu.cxx:624
#31 0x00002aaac83f792e in GtkSalMenu::SetFrame(SalFrame const*) (this=0x2f35510, pFrame=0x2ade180)
    at /home/julien/compile-libreoffice/libreoffice/vcl/unx/gtk3/../gtk/gtksalmenu.cxx:694
#32 0x00002aaab2d483d1 in MenuBarWindow::SetMenu(MenuBar*) (this=0x2fd4e00, pMen=0x2f34ee0)
    at /home/julien/compile-libreoffice/libreoffice/vcl/source/window/menubarwindow.cxx:203
#33 0x00002aaab2d3ad35 in MenuBar::ImplCreate(vcl::Window*, vcl::Window*, MenuBar*) (pParent=0x2add8f0, pWindow=0x2fd4e00, pMenu=0x2f34ee0)
    at /home/julien/compile-libreoffice/libreoffice/vcl/source/window/menu.cxx:2571


Caolan: thought you might be interested in this one since it concerns vcl + gtk3 only.
Comment 2 Caolán McNamara 2016-03-14 14:04:08 UTC
|| ends up in action names and gtk really doesn't like that
Comment 3 Commit Notification 2016-03-14 15:14:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=032cb7ed80a504b4abec479f30c2c03f10e14639

Resolves: tdf#98473 replace || with ‖ to avoid illegal gtk3 action names

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2016-03-14 15:14:28 UTC
That'll do I hope
Comment 5 Julien Nabet 2016-03-15 20:37:39 UTC
I still got the same crash:
#28 0x00002aaac88ba48a in gtk_menu_shell_bind_model () at /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
#29 0x00002aaac88b138f in gtk_menu_bar_new_from_model () at /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
#30 0x00002aaac83fb54f in GtkSalMenu::CreateMenuBarWidget() (this=0x3177fc0) at /home/julien/compile-libreoffice/libreoffice/vcl/unx/gtk3/../gtk/gtksalmenu.cxx:624
#31 0x00002aaac83fb9ea in GtkSalMenu::SetFrame(SalFrame const*) (this=0x3177fc0, pFrame=0x299bf00)
    at /home/julien/compile-libreoffice/libreoffice/vcl/unx/gtk3/../gtk/gtksalmenu.cxx:694
#32 0x00002aaab2d4b309 in MenuBarWindow::SetMenu(MenuBar*) (this=0x323e5c0, pMen=0x3177ea0)
    at /home/julien/compile-libreoffice/libreoffice/vcl/source/window/menubarwindow.cxx:203


git log -1 => 
commit 869262bcc980d1d964036dbaba87a456479f53b7
Author: Tor Lillqvist <tml@collabora.com>
Date:   Tue Mar 15 08:13:25 2016 +0200

    Re-introduce two lines apparently accidentally removed yesterday
    
    ... in 43d57d105d2acf97e79e90f8d640923b91ac64a8.
    
    Change-Id: I07a1b9cb4edb34558c1b4aaf56a01b635de49f65

I did a "make clean" before building again.
Comment 6 Julien Nabet 2016-03-15 21:24:17 UTC
If it can help, I also noticed these on console:
App path: /home/julien/compile-libreoffice/libreoffice/instdir/program/
bootstap: file:///home/julien/compile-libreoffice/libreoffice/instdir/program/bootstraprc
user installation: file:///home/julien/compile-libreoffice/libreoffice/instdir/
Generate pipe md5 for 'file:///home/julien/compile-libreoffice/libreoffice/instdir/'
result: /tmp/OSL_PIPE_1000_SingleOfficeIPC_519e59a99639aa84d1279b4bc9799ca
Failed to connect to pipe: /tmp/OSL_PIPE_1000_SingleOfficeIPC_519e59a99639aa84d1279b4bc9799ca
warn:vcl:4286:1:vcl/unx/generic/fontmanager/fontmanager.cxx:1343: Could not OpenTTFont "/usr/share/fonts/woff/font-awesome/fontawesome-webfont.woff"

warn:legacy.osl:4286:1:sfx2/source/view/viewfrm.cxx:3108: SID_SIDEBAR state requested, but no task pane child window exists for this ID!

(soffice:4286): Gtk-CRITICAL **: gtk_print_action_and_target: assertion 'strchr (action_name, '|') == NULL' failed
Comment 7 Caolán McNamara 2016-03-16 10:20:35 UTC
The fix got reverted again as far as I can see
Comment 8 Commit Notification 2016-03-16 10:28:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c9be863a12bc7419a0a1302700f747f0a7e1052b

Resolves: tdf#98473 replace || with ‖ to avoid illegal gtk3 action names

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2016-03-16 10:31:03 UTC
trying again
Comment 10 Julien Nabet 2016-03-17 18:45:04 UTC
It works now, thank you Caolán!