Resolves: tdf#98473 replace || with ‖ to avoid illegal gtk3 action names

again, was reverted by

commit 48c2e04bdb60429823cb8b12a14d954af544a2bf
Date:   Mon Mar 14 22:10:23 2016 +0100

which I'm assuming was a merge error

Change-Id: Iad3c2149438822d1e8b1406e35372a3e2b50bfa3